--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <script type="text/javascript">
 
 //Bucket Configurations
-var bucketName = "googlyify1";
+var bucketName = "redacted";
 var bucketRegion = "us-east-1";
-var IdentityPoolId = "us-east-1:29d9abce-8e2b-4576-8b5f-de118f369267";
+var IdentityPoolId = "redacted";
 
  AWS.config.update({
                 region: bucketRegion,
